2010-05-19    <jmerelo@localhost.localdomain>

	* Makefile.PL: Actualizando dependencias; faltaba
	LWP::Simple. Pensaba que estaba por defecto. Esta seria la 0.0.6

2010-05-17    <jmerelo@localhost.localdomain>

	* Makefile.PL: Añadido File::Slurp a las dependencias

Revision history for ES-Senado

0.0.1  Sat Apr 17 09:38:55 2010
       Initial release.
