@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Data-ES-Senado
-version:            0.0.6
+version:            0.0.7
 abstract:           Clase base para representar los datos del Senado español
 author:
     - JJ Merelo <jj@merelo.net>
@@ -13,6 +13,7 @@ build_requires:
 requires:
     DBIx::Class:  0
     File::Slurp:  0
+    LWP::Simple:  0
     Test::More:   0
     version:      0
     YAML:         0
